Bug 448043 - Metadata not loaded in Now Playing view for files loaded into playlist from .m3u8 file
Summary: Metadata not loaded in Now Playing view for files loaded into playlist from ....
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-06 23:44 UTC by Nate Graham
Modified: 2022-01-27 15:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-01-06 23:44:33 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Have a .m38u playlist file
2. Load it into the Playlist with the Load... button
3. Start playing
4. Show the "Now Playing" view


OBSERVED RESULT
Metadata and lyrics are blank.


EXPECTED RESULT
Metadata and lyrics are shown.


ADDITIONAL INFORMATION
Loading the same files from within the main UI works fine, so this is an issue specific to the code path for loading playlist files on disk.
Comment 1 Yerrey Dev 2022-01-27 15:23:49 UTC
Git commit fe5f08cb7dff65cc2b1e6cb8e6e45706201c233c by Yerrey Dev.
Committed on 27/01/2022 at 12:02.
Pushed by ngraham into branch 'master'.

Fix metadata not updating when track is opened from Files-browser

This was caused by files being opened as ElisaUtils::FileName TrackType instead of
ElisaUtils::Track, to fix this, we just add that into ModelDataLoader::loadDataByDatabaseIdAndUrl.
Related: bug 445382, bug 427289

M  +1    -1    src/modeldataloader.cpp

https://invent.kde.org/multimedia/elisa/commit/fe5f08cb7dff65cc2b1e6cb8e6e45706201c233c