Fix metadata not updating when track is opened from Files-browser

This was caused by files being opened as ElisaUtils::FileName TrackType instead of
ElisaUtils::Track, to fix this, we just add that into ModelDataLoader::loadDataByDatabaseIdAndUrl.

BUG: 448043
BUG: 445382
BUG: 427289